--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -92,7 +92,7 @@ jobs:
 #          fod_release_id: ${{ secrets.FOD_RELEASE_ID }}
 
       # Import Fortify on Demand results to GitHub Security Code Scanning
-      - name: Import Results
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: ./gh-fortify-sast.sarif
+#      - name: Import Results
+#        uses: github/codeql-action/upload-sarif@v2
+#        with:
+#          sarif_file: ./gh-fortify-sast.sarif
